--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  dartz: ^0.10.1
+  get_it: ^7.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
